# ood

./: README.md
1/10/: CMakeLists.txt
1/10/cmd/: main.cpp
1/10/src/app/: Editor.h
1/10/src/lib/command/: History.h  IHistory.h  MultiCommand.h
1/10/src/lib/common/: Color.h  Point.h  Rect.h  Size.h
1/10/src/lib/sfml/canvas/: Canvas.cpp  Canvas.h
1/10/src/model/common/: Color.h  Point.h  Rect.h  Size.h
1/10/src/model/draft/: Draft.h  IDraft.h
1/10/src/model/shape/: IShape.h  Shape.h
1/10/src/model/style/fill/: FIllStyle.h  IFillStyle.h
1/10/src/model/style/line/: ILineStyle.h  LineStyle.h
1/10/src/presenter/: BasePresenter.h  IPresenter.h
1/10/src/presenter/button/: Button.h
1/10/src/presenter/command/: History.h  ICommand.h  IExecuter.h  IHistory.h
1/10/src/presenter/draft/: Draft.h
1/10/src/presenter/editor/: Editor.h
1/10/src/presenter/menu/: Menu.h
1/10/src/presenter/shape/: Shape.h  ViewFactory.h
1/10/src/view/: BaseView.h  IView.h
1/10/src/view/button/: Button.h
1/10/src/view/canvas/: ICanvas.h
1/10/src/view/container/: Container.h
1/10/src/view/draft/: Draft.h
1/10/src/view/menu/: Menu.h
1/10/src/view/shape/: IShapeViewStrategy.h  Shape.h
1/10/src/view/shape/strategy/: Cricle.h
1/10/test/: test.cpp
1/1_1/: CMakeLists.txt
1/1_1/1/cmd/: main.cpp
1/1_1/1/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h
1/1_1/1/lib/Duck/Dance/: DanceMinuet.h  DanceWaltz.h  IDanceBehavior.h
1/1_1/1/test/: testProvider.cpp
1/1_1/2/lib/Duck/: RedheadDuck.h  RubberDuck.h
1/1_1/2/lib/Duck/Dance/: IDanceBehavior.h
1/1_1/2/lib/Duck/Fly/: FlyWithWings.h
1/1_1/2/test/: testProvider.cpp
1/1_1/3/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
1/1_1/3/lib/Duck/Dance/: DanceBehavior.h  DanceMinuet.h  DanceNoWay.h  DanceWaltz.h
1/1_1/3/lib/Duck/Fly/: FlyBehavior.h  FlyNoWay.h  FlyWithWings.h
1/1_1/3/lib/Duck/Quack/: MuteQuack.h  Quack.h  QuakBehavior.h  Squeak.h
1/1_1/3/test/: testProvider.cpp
1/1_1/4/: DIEGRAM.md
1/1_1/4/cmd/: main.cpp
1/1_1/4/lib/Canvas/: ICanvas.h  Picture.h  Shape.h
1/1_1/4/lib/Canvas/PNGCanvas/: PNGCanvas.cpp  PNGCanvas.h  stb_truetype.h
1/1_1/4/lib/Canvas/ShapeStrategy/: CircleStrategy.h  IShapeStrategy.h  LineStrategy.h  RectangleStrategy.h  TextStrategy.h  TriangleStrategy.h
1/1_1/4/lib/Handler/: ShapeCommandHandler.h  ShapeCommandHanler.h
1/1_1/4/lib/Handler/CommandsHandlers/: AddShapeHandler.h  ChangeColorHandler.h  ChangeShapeHandler.h  CloneShapeHandler.h  CommandType.h  DeleteShapeHandler.h  DrawPictureHandler.h  DrawShapeHandler.h  ListShapesHandler.h  MovePictureHandler.h  MoveShapeHandler.h  ParseFunc.h
1/1_1/4/lib/Picture/: Picture.cpp  Picture.h  Point.cpp  Point.h  Shape.h
1/1_1/4/lib/Picture/ShapeStrategy/: CircleStrategy.h  IShapeStrategy.h  LineStrategy.h  RectangleStrategy.h  TextStrategy.h  TriangleStrategy.h  Type.cpp  Type.h
1/1_1/4/test/: testProvider.cpp
1/2/: CMakeLists.txt  README.md
1/2/1/lib/: WeatherData.h
1/2/1/test/: testProvider.cpp
1/2/2/lib/: Observer.h
1/2/2/test/: testProvider.cpp
1/2/3/lib/: Observer.h  WeatherData.h
1/2/3/test/: testProvider.cpp
1/2/4/lib/: Observer.h  WeatherData.h
1/2/5/cmd/: main.cpp
1/2/5/lib/: Observer.h  WeatherData.h
1/2/5/test/: testProvider.cpp
1/2/7/cmd/: main.cpp
1/2/7/lib/: Observer.h  WeatherData.h
1/2/7/test/: testProvider.cpp
1/2/8/cmd/: main.cpp
1/2/8/lib/: Observer.h  WeatherData.h
1/2/8/test/: testProvider.cpp
1/3/: CMakeLists.txt  README.md
1/3/1/lib/: Condiment.h  InfoByType.h
1/3/1/lib/Beverages/: CappuccinoPreset.h  Cappucciono.h  Cofee.h  LattePreset.h  Milkshake.h  MilkshakePreset.h  Tea.h
1/3/1/lib/Condiments/: ChocolateCrumbs.h  Cinnamon.h  CoconutFlakes.h  CondimentMaker.h  IceCubes.h
1/3/1/test/: testProvider.cpp
1/3/2/lib/: Beverage.h  Condiment.h  InfoByType.h
1/3/2/lib/Beverages/: CappuccinoPreset.h  Latte.h  LattePreset.h  TeaPreset.h
1/3/2/lib/Condiments/: Chocolate.h  CondimentMaker.h  Cream.h  IceCubes.h  Lemon.h  Liquor.h  LiquorPreset.h  Syrup.h
1/3/2/test/: testProvider.cpp
1/3/3/cmd/: main.cpp
1/3/3/data/in/: encrypt1.txt
1/3/3/lib/IO/: IInputDataStream.h  IOutputDataStream.h
1/3/3/lib/IO/Modifications/: CInputDataStreamDecorator.h  COutputDataStreamDecorator.h  CompressDecorator.h  DecompressDecorator.h  DecryptDecorator.h  EnctyptDecorator.h  RLE.h  UtilsFunc.h
1/3/3/lib/IO/Streams/: CFileInputStream.h  CFileOutputStream.h  CMemoryInputStream.h  CMemoryOutputStream.h
1/3/3/lib/transform/: Handler.h
1/3/3/test/: testProvider.cpp
1/4/: README.md
1/4/data/: tamara.txt
1/4/lib/Canvas/: ICanvas.h
1/4/lib/Canvas/PNGCanvas/: PNGCanvas.h  stb_image_write.h
1/4/lib/Common/: Color.h  Point.h
1/4/lib/Participant/Client/: CClient.h
1/4/lib/Shape/: CFactory.h  CShape.h  IFactory.h  IShapStrategy.h
1/4/test/: testProvider.cpp
1/5/: README.md  commands.txt
1/5/cmd/: main.cpp
1/5/lib/Command/: AbstractUndoableEdit.cpp  AbstractUndoableEdit.h  CompoundEdit.cpp  CompoundEdit.h  IUndoableEdit.h  UndoManager.cpp  UndoManager.h
1/5/lib/Document/: ConstDocumentItem.h  Document.h  DocumentItem.h  IDocument.h
1/5/lib/Handler/: CommandHandler.h
1/5/lib/Menu/: Menu.h
1/5/test/: testProvider.cpp
1/6/: README.md
1/6/lib/Adapter/: ModernGraphicsToGraphicsClassAdapter.h  ModernGraphicsToGraphicsObjectAdapter.h
1/6/lib/Graphic/: graphics_lib.h  modern_graphics_lib.h
1/6/lib/Shape/: shape_drawing_lib.h
1/6/test/: test.cpp
1/7/: README.md
1/7/test/: testProvider.cpp
1/8/: DOCS.md
1/8/lib/Customer/: CustomerHandler.h
1/8/lib/Gumball/: IGumballMachine.h
1/8/lib/Menu/: Menu.h
1/8/lib/MultiGumball/: GumballMachine.h  IAdminGumballMachine.h  IGumballMachine.h
1/8/test/: testGumball.cpp  testProvider.cpp  testStates.cpp
1/9/: PROXY.md  SCHEMA.md
1/9/lib/: drawer.h  loader.h
1/9/lib/geom/: point.h  size.h
1/9/lib/image/: image.h  tile.h
1/9/lib/proxy/: cow.h
1/9/test/: testProvider.cpp
1/example/: CMakeLists.txt
1/example/test/: testProvider.cpp
(+30 files in other folders)
